--- a/työaika/työaika.csproj
+++ b/työaika/työaika.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{191406DB-02E9-457D-9D59-EA043016D64B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>työaika</RootNamespace>
-    <AssemblyName>työaika</AssemblyName>
+    <RootNamespace>tyoaika</RootNamespace>
+    <AssemblyName>tyoaika</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
