--- a/työaika/App.config
+++ b/työaika/App.config
@@ -6,6 +6,9 @@
         <add name="tyoaika.Properties.Settings.ProjektiConnectionString"
             connectionString="Data Source=LANKKU\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="tyoaika.Properties.Settings.ProjektiConnectionString1"
+            connectionString="Data Source=IDEAPAD-4E5KKE5\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
