Asetukset välilehdeltä korjattu kohteen listview-näkymän data.

--- a/työaika/App.config
+++ b/työaika/App.config
@@ -9,6 +9,9 @@
         <add name="tyoaika.Properties.Settings.ProjektiConnectionString1"
             connectionString="Data Source=IDEAPAD-4E5KKE5\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="tyoaika.Properties.Settings.ProjektiConnectionString2"
+            connectionString="Data Source=BLACKBOX\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
