Lisätty ComboBoksiin tunnit

--- a/työaika/työaika.csproj
+++ b/työaika/työaika.csproj
@@ -67,6 +67,7 @@
       <DependentUpon>DataSet1.xsd</DependentUpon>
     </Compile>
     <Compile Include="Tehtava.cs" />
+    <Compile Include="Tyoaika.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
