Lisätty Työaika -välilehdelle Lähetä ja Tyhjennä -nappulan toiminnot. Korjattu Työaika -välilehden listanäkymään TehtäväID ja KohdeId. Muutettu keskimmäisen välilehden nimeksi Raportti. Työaika -välilehden Muokkaa ja Poista -nappulat kesken.

--- a/työaika/työaika.csproj
+++ b/työaika/työaika.csproj
@@ -70,7 +70,9 @@
       <DependentUpon>DataSet1.xsd</DependentUpon>
     </Compile>
     <Compile Include="Tehtava.cs" />
-    <Compile Include="Tyoaika.cs" />
+    <Compile Include="Tyoaika.cs">
+      <Generator>__</Generator>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
