--- a/työaika/App.config
+++ b/työaika/App.config
@@ -5,7 +5,7 @@
     <connectionStrings>
 
       <add name="tyoaika.Properties.Settings.ProjektiConnectionString"
-          connectionString="Data Source=LANKKU\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True"
+          connectionString="Data Source=BLACKBOX\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True"
           providerName="System.Data.SqlClient" />
 
     </connectionStrings>
