--- a/työaika/App.config
+++ b/työaika/App.config
@@ -6,7 +6,7 @@
 
 
       <add name="tyoaika.Properties.Settings.ProjektiConnectionString"
-          connectionString="Data Source=BLACKBOX\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True"
+          connectionString="Data Source=DESKTOP-9DOF351\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True"
           providerName="System.Data.SqlClient" />
 
 
