--- a/työaika/Properties/Settings.settings
+++ b/työaika/Properties/Settings.settings
@@ -5,42 +5,10 @@
     <Setting Name="ProjektiConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=LANKKU\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=DESKTOP-9DOF351\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=LANKKU\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True</Value>
-    </Setting>
-    <Setting Name="ProjektiConnectionString1" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=IDEAPAD-4E5KKE5\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=IDEAPAD-4E5KKE5\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True</Value>
-    </Setting>
-    <Setting Name="ProjektiConnectionString2" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=BLACKBOX\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=BLACKBOX\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True</Value>
-    </Setting>
-    <Setting Name="ProjektiConnectionString3" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=DESKTOP-9DOF351\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=DESKTOP-9DOF351\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False</Value>
-    </Setting>
-    <Setting Name="ProjektiConnectionString4" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=LAPTOP-VNN2ENM0\SQLEXPRESS02;Initial Catalog=Projekti;Integrated Security=True&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=LAPTOP-VNN2ENM0\SQLEXPRESS02;Initial Catalog=Projekti;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=DESKTOP-9DOF351\SQLEXPRESS;Initial Catalog=Projekti;Integrated Security=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
